apps/synapse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: synapse
  labels:
    gateway-access: synapse
