apps/synapse/deployment.yaml
# Requires docker run [...] generate first!
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
        gateway-access: synapse
    spec:
      nodeSelector:
        affected_vlan: "50"
      securityContext:
        runAsUser: 991
        runAsGroup: 991
        fsGroup: 991
      containers:
      - name: synapse
        image: matrixdotorg/synapse:v1.151.0
        ports:
        - containerPort: 8008
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config-volume
          mountPath: /etc/synapse/homeserver.yaml
          subPath: homeserver.yaml
        - name: config-volume
          mountPath: /etc/synapse/log.config
          subPath: synapse.hoareau-marion.eu.log.config
        - name: signing-key-volume
          mountPath: /etc/synapse/signing.key
          subPath: signing.key
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
      - name: config-volume
        secret:
          secretName: synapse-secrets 
      - name: signing-key-volume
        secret:
          secretName: signing-key
          defaultMode: 0600
