apps/synapse/route.yaml
# apps/synapse/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: synapse
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: synapse-https     
  hostnames:
    - "synapse.hoareau-marion.eu"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "X-Forwarded-Proto"
                value: "https"
    - backendRefs:
        - name: synapse
          port: 8008
